src/objects/Competitor__c.object
<CustomObject>
    <description>This custom object will be used to track Competitors related to an Opportunity. This has been created to replace the standard Competitors table.</description>
    <fields>
        <fullName>Competitor_Name__c</fullName>
        <label>Competitor Name</label>
        <picklist>
            <picklistValues>
                <fullName>Do Nothing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppNeta/Traceview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aternity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueStripe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMC Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA Technologies/Wily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compuware/dynaTrace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correlsense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crittercism</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ExtraHop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP/Openview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM/ITCAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keynote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loggly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ManageEngine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft/Avicode</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nastel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Relic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opnet Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Precise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quest Software/Foglight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ruxit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smartbear/Lucierna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarwinds/Confio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Splunk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SumoLogic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Competitors</relationshipLabel>
        <relationshipName>Competitors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Primary_Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <label>Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Weaknesses__c</fullName>
        <label>Weaknesses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Competitor</label>
    <nameField>
        <displayFormat>Competitor-{000000}</displayFormat>
        <label>Competitor</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>